--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h1>個人資訊</h1>
         <p><strong>姓名：</strong>花偉喆</p>
         <p><strong>學號：</strong>S1131557</p>
-        <p><strong>系級：</strong>資訊工程學系 二B</p>
+        <p><strong>系級：</strong>資訊工程學系 2B</p>
     </div>
 
 </body>
