對自我介紹增加內容

--- a/index.html
+++ b/index.html
@@ -55,10 +55,38 @@
 <body>
 
     <div class="article-container">
-        <h1>個人資訊</h1>
-        <p><strong>姓名：</strong>花偉喆</p>
-        <p><strong>學號：</strong>S1131557</p>
-        <p><strong>系級：</strong>資訊工程學系 2B</p>
+        <h1 id="個人資訊">個人資訊 </h1>
+        <ul>
+        <li>姓名：花偉喆</li>
+        <li>學號：S1131557</li>
+        <li>系級：資訊工程學系 2B</li>
+        </ul>
+        <h1 id="經歷">經歷 </h1>
+        <ul>
+        <li>2019 ~ 2021 臺中市立臺中第一高級中等學校
+        <ul>
+        <li>數位創作研習社 第 14 屆副社長</li>
+        </ul>
+        </li>
+        <li>2021 ~ 2022 東海大學 應用物理系</li>
+        <li>2024 ~ 2025 中國文化大學 資訊工程學系</li>
+        <li>2025 ~ 現在 元智大學 資訊工程學系</li>
+        </ul>
+        <h1 id="自我介紹">自我介紹 </h1>
+        <p>我對計算機圖學有興趣，希望未來能朝這個領域發展。</p>
+        <h1 id="作品">作品 </h1>
+        <ul>
+        <li>
+        <p><a href="https://github.com/Denny0411/project_survivors">project_survivors</a><br>
+        使用 EasyX API 製作的類倖存者遊戲。<br>
+        <a href="https://youtu.be/-zkK9AyxedM">展示影片</a></p>
+        </li>
+        <li>
+        <p>Agora<br>
+        1141 CS380 final project<br>
+        <a href="https://youtu.be/RADwX3JYsb0">介紹影片</a></p>
+        </li>
+        </ul>
     </div>
 
 </body>
