--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <li>2025 ~ 現在 元智大學 資訊工程學系</li>
         </ul>
         <h1 id="自我介紹">自我介紹 </h1>
-        <p>我對計算機圖學有興趣，希望未來能朝這個領域發展。</p>
+        <p>我對計算機圖學有興趣，希望未來能朝相關領域發展。</p>
         <h1 id="作品">作品 </h1>
         <ul>
         <li>
